--- a/module/Front/view/front/index/home.phtml
+++ b/module/Front/view/front/index/home.phtml
@@ -11,13 +11,20 @@ $com = $this->Communicator();
 
 <div id="form">
    <h1><?php echo $this->translate('welcome_message') ?></h1>
-   <p><?php echo $this->translate('tag_line_1') ?></p>
+   <p><?php //echo $this->translate('tag_line_1') ?></p>
+   
+    <?php if($this->internal) : ?>
+        <div class="col-lg-4 col-lg-offset-4">
+            <div class="alert alert-danger"><strong>WARNING</strong> This form is for internal use only</div>
+        </div>
+        <div class="row"></div>
+    <?php endif ; ?>
 
    <div id="container">
-   
+
       <h2><?php echo $this->translate('Create Account')?> <span><?php echo $this->translate('fill_in_required_fields') ?></span></h2>
       
-      <form method="post" action="<?php echo $this->url('home') ?>" id="form_element" enctype="multipart/form-data">
+      <form method="post" action="<?php echo $this->url($this->route_name) ?>" id="form_element" enctype="multipart/form-data">
       
          <div id="alert"><?php $com->printMessage() ?></div>
          <div id="loader"><img src="<?php echo $this->basePath('img/loader.gif') ?>"> 
