--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -24,17 +24,17 @@ html {
 }
 
 body, html {
-background: #fff;
+background: #fff!important;
 min-height: 100%;
 margin: 0px;
 padding: 0px;
 }
 
 header {
-border-bottom: 3px solid #89BD04;
-margin: auto;
-padding-bottom: 45px;
-width: 1140px;
+  border-bottom: 0px solid #89BD04;
+  margin: 0px auto;
+  padding-bottom: 25px;
+  width: 1140px;
 }
 
 header div {
@@ -43,7 +43,8 @@ vertical-align: top;
 }
 
 header div#logo {
-padding-top: 50px;
+    padding-top: 0px;
+      margin-bottom: 15px;
 }
 
 header div#right-buttons {
@@ -60,19 +61,26 @@ text-decoration: none;
 }
 
 #form, #thanks {
-background: #fff;
-width: 1138px;
-margin: auto;
-padding-bottom: 80px;
+background: #888;
+  width: 1138px;
+    margin: -169px auto;
+  padding-bottom: 80px;
+  /* margin-top: -30px; */
+  padding-top: 0px;
 }
 
 #form h1, #thanks h1 {
-background: url("../img/register-form.jpg");
-font-family: 'Open Sans', sans-serif;
-font-size: 24px;
-height: 40px;
-padding-top: 10px;
-padding-left: 80px;
+/*background: url("../img/register-form.jpg");*/
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  /* height: 40px; */
+  /* padding-top: 10px; */
+  /* padding-left: 80px; */
+  text-align: center;
+  color: #fff;
+  padding: 15px;
+  background-color: #8abc01;
+      display: none;
 }
 
 #form p {
@@ -85,35 +93,38 @@ width: 727px;
 }
 
 #form div#container {
-background: #8ABC01;
-border-radius: 5px;
-margin: auto;
-padding: 10px 1px 1px 1px;
-width: 618px;
+  background: #ebe9e9;
+  border-radius: 0px;
+  margin: auto;
+  /* height: 133px; */
+  padding: 24px 0px 33px 0px;
+  width: 613px;
 }
 
 #form div h2 {
-color: #fff;
-font-family: 'Open Sans', sans-serif;
-font-size: 18px;
-font-weight: normal;
-padding: 0px;
-padding-bottom: 5px;
-padding-left: 30px;
-margin: 0px;
+        color: #fff;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 18px;
+        font-weight: normal;
+        padding: 0px;
+        padding-bottom: 5px;
+        padding-left: 30px;
+        margin: 0px;
+      display: none;
 }
 
 #form div h2 span {
-color: #5B5B5F;
-display: inline-block;
-float: right;
-margin-right: 10px;
+  color: #5B5B5F;
+  display: inline-block;
+  float: left;
+  margin-right: 74px;
+  width: 149px;
 }
 
 #form div form {
-background: #fff;
-border-radius: 5px;
-padding-top: 20px;
+    border-radius: 5px;
+    padding-top: 20px;
+    background: #ebe9e9;
 }
 
 #form div form div {
@@ -130,35 +141,62 @@ margin-bottom: 0px;
 }
 
 #form div form div label {
-width: 150px;
-padding-right: 15px;
-text-align: right;
-vertical-align: middle;
+  width: 130px;
+  padding-right: 15px;
+  text-align: right;
+  vertical-align: middle;
+  margin-left: 30px;
+  text-align: left;
+  color: #4e4e4e;
+  font-size: 16px;
+  font-weight: normal;
+}
+
+
+body .form-control[disabled], body .form-control[readonly], body fieldset[disabled] .form-control {
+  cursor: not-allowed;
+  background-color: #e0e0e0;
+  opacity: 1;
+  border-radius: 0px;
+  border: 1px dashed #888!important;
 }
 
 .form-control-2 {
 padding: 5px 0;
 }
 
-
 .required label {
 color: #8ABC01;
 }
 
-
 #form div form div input, #form div form div select {
-border-radius:5px;
-border: 1px solid #ccc;
-padding: 5px;
-width: 250px;
+border-radius:0spx;
+border: 0px solid #ccc;
+padding: 15px;
+    height:5px;
+    width:250px;
 }
 
 #form div form div.large input {
-width: 350px;
+      width: 410px;
+}
+
+#form div form div.required input {
+      border: 1px solid #ccc;
+}
+
+#form .form-control-2 input[type=file] {
+     background-color:#fff; 
+     height: auto!important;
 }
 
 #form div form div input[type="checkbox"] {
-width: 30px;
+  width: 16px;
+  border-radius: 0px;
+  /* width: 100%; */
+  display: block;
+  height: 32px;
+  padding-top: 17px;
 }
 
 #form div form div.textarea label {
@@ -175,28 +213,49 @@ width: 350px;
 }
 
 #submit {
-margin: auto;
-text-align: right;
-width: 420px;
-}
-.error{margin-left:170px;font-size:12px;color:red;display:block}
-#submit input[type="submit"] {
-background: url('../img/save.png') #8ABC01 no-repeat center right;
-padding: 5px;
-width:auto;
-color: #fff;
-text-align: left;
-padding-left:30px;
-padding-right:40px
+  margin: 0px;
+  /* text-align: center; */
+  width: 499px;
+  margin-left: 82px;
+  margin-right: 0px;
 }
 
+.error{margin-left:170px;font-size:12px;color:red;display:block}
+
+
+
+#submit input[type="submit"] {
+  float: left;
+  background-color: #8ABC01;
+  padding: 5px;
+  width: 254px;
+  color: #fff;
+  font-size: 1.6em;
+  text-align: center;
+  padding-left: 30px;
+  padding-right: 40px;
+    font-family: 'Open Sans', sans-serif;
+      height: 45px;
+    transition: all 0.5s ease;
+}
+
+#submit input[type="submit"]:hover {
+   background-color: #79a405; 
+}
+
+
+
+
+
 #submit button {
-color: #8ABC01;
-background: #fff;
-border: 1px solid #8ABC01;
-border-radius: 5px;
-padding: 5px;
-width: 72px;
+  color: #8ABC01;
+  background: #fff;
+  border: 1px solid #8ABC01;
+  border-radius: 0px;
+  padding: 11px;
+  width: 146px;
+  font-size: 1.1em;
+  margin-left: 7px;
 }
 
 footer {
@@ -213,9 +272,10 @@ footer div {margin-right:100px}
 
 /*@media (max-height: 667px){*/
     footer {
-        bottom: 0px;
-        position: fixed;
-        width: 100%;
+          bottom: 0px;
+          position: relative;
+          width: 100%;
+          float: left;
     }
 /*}*/
 
@@ -294,7 +354,319 @@ width: 260px;
 float: right;
 }
 
+/* Supported H2 */
+
+
+#text-top  {
+     margin-top: -33px;
+}
+ 
+
+#text-top h2 {
+  text-align: center;
+  color: #0096d7;
+  padding: 13px;
+  background-color: #efefef;
+  width: 1140px;
+  margin: 0px auto;
+}
+
+
+.main-menu ul li {
+  list-style: none;
+  margin-right: 33px;
+  float: left;
+}
+
+.main-menu ul li a {
+    text-transform: uppercase;
+   float:left;
+/* font-size: 0.95em;*/
+    font-size: 1.15em!important;
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    color:#000;
+    text-decoration: none;
+}
+
+#head-form {
+  background-repeat: no-repeat;
+  background-position: 428px 0px;
+  height: 41px;
+  width: 1138px;
+  margin: 0px auto;
+  position: relative;  
+}
+
+#head-form h3 {
+  /* background-color: #0093d6; */
+  color: #fff;
+  padding: 11px 25px;
+  margin: 0px;
+  width: 412px;
+  margin: 24px 427px;
+  font-size: 1.3em;
+  text-transform: uppercase;
+  color: #0093d6;
+  font-weight: normal;
+}
+
 #supported_formats_label{font-size:12px;float:right;margin-top:10px;margin-right:40px}
-#recommended_size_label{font-size:12px;margin-left:160px;clear:left;}
+#recommended_size_label{
+  font-size: 12px;
+  margin-left: 164px;
+  margin-top: 13px;
+  clear: left;
+}
 #recommended_size_label label{color:#000;padding:0px !important;margin:0px !important;font-size:12px !important;font-weight:normal;text-align:left !important;width:auto !important}
+
+
+
+
+
+#main-menu {
+       margin-top: -53px;
+      float: right;
+}
+
+#main-menu ul {
+    width: 724px; 
+    text-align: right;
+}
+
+
+#main-menu ul li {
+	position: relative;
+}
+
+
+#main-menu ul li a {
+  display: block;
+  font-size: 16px;
+  text-decoration: none;
+  color: #000;
+      text-transform: uppercase;
+}
+
+#main-menu ul li a:active {
+	color: #404040;
+}
+
+#main-menu ul:first-child > li {
+	display: inline-block;
+	padding: 0 15px;
+	padding-bottom: 15px;
+	position: relative;
+}
+
+
+#main-menu a {
+	font-family: 'Open Sans', sans-serif;
+}
+
+#main-menu ul li ul {
+	display:none;
+	position:absolute;
+	z-index: 20000;
+}
+
+#main-menu ul li ul {
+	left: -20px;
+	top: 30px;
+}
+
+#main-menu ul li ul.drop-soluciones {
+	left: -42px;
+}
+
+#main-menu ul li ul.drop-servicios {
+	left: -51px;
+}
+
+#main-menu ul li ul.drop-cursos {
+	left: -58px;
+}
+
+#main-menu ul li ul.drop-nosotros {
+	left: -44px;
+}
+
+#main-menu ul li:hover ul {
+	display: block;
+	animation-duration: 0.1s;
+	animation-name: slidein;
+	-webkit-animation-duration: 0.1s;
+	-webkit-animation-name: slidein;
+  	-moz-animation-duration: 0.1s;
+	-moz-animation-name: slidein;
+}
+
+#main-menu ul li:hover > ul > li:first-child > a::before {
+	content: "\00a0";
+	border-left: 5px solid rgba(0, 0, 0, 0);
+	border-right: 5px solid rgba(0, 0, 0, 0);
+	border-bottom: 10px solid #111;
+	height: 0px;
+	left: 60px;
+	position: absolute;
+	top: -9px;
+	width: 0px;
+	z-index: 1000000;
+}
+
+#main-menu ul > li:hover > ul > li:first-child > a:hover::before {
+	border-bottom: 10px solid #04acec;
+}
+
+#main-menu ul li > ul li {
+	display: block;
+	float: none;
+}
+
+#main-menu ul li:hover > ul li a {
+	color: #fff;
+	background-color: #111;
+	border-top: 1px solid #808080;
+	padding: 5px 10px;
+	text-align: left;
+	width: 170px;
+}
+
+#main-menu ul li > ul li a {
+	font-size: 13px;
+}
+
+#main-menu ul li:hover > ul li a:hover {
+	background-color: #0186ba;
+	background-image: linear-gradient(#04acec, #0186ba);
+}
+
+#main-menu ul li:hover > ul li:first-child > a {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+
+#main-menu ul li:hover > ul li:last-child >  a{
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+}
+
+#main-menu ul li:hover > ul li > ul {
+	display: none;
+	top: 0px !important;
+    left: 144px;
+}
+
+#main-menu ul li:hover > ul li:hover > ul {
+	display: block;
+	animation-duration: 0.1s;
+	animation-name: slideleft;
+	-webkit-animation-duration: 0.1s;
+	-webkit-animation-name: slideleft;
+  	-moz-animation-duration: 0.1s;
+	-moz-animation-name: slideleft;
+}
+
+#main-menu ul li ul li:hover ul li:first-child a::before {
+	border-top: 5px solid rgba(0, 0, 0, 0);
+	border-bottom: 5px solid rgba(0, 0, 0, 0);
+	border-right: 10px solid #111;
+	left: -15px;
+	top: 15px;
+}
+
+#main-menu ul li ul li:hover ul li:first-child a:hover::before {
+	border-right: 10px solid #04acec;
+	border-bottom: 5px solid rgba(0, 0, 0, 0);
+}
+
+#main-menu ul li > ul > li:last-child > ul {
+	top: 38px;
+}
+
+
+
+/* aside */
+
+#centrar {
+    width: 452px;
+  /* margin: 0px auto; */
+  /* top: 0px; */
+  float: right;
+  position: relative;
+}
+
+.custom.top-telephone-number {
+  background-image: url(https://www.paradisosolutions.com.co/templates/paradiso/img/phone.png);
+  background-repeat: no-repeat;
+  background-position: left 10px;
+  background-size: 17px;
+  height: 50px;
+  margin-right: 0px;
+  width: 326px;
+  margin-top: 11px;
+}
+
+.custom.top-telephone-number p {
+  margin: 0;
+  padding-left: 30px;
+  font-size: 1.2em;
+  font-weight: 600;
+  padding-top: 10px;
+  color: #434142;
+  float: left;
+}
+
+.custom.top-telephone-number p.movil {
+  background-image: url(https://www.paradisosolutions.com.co/images/icons/movil-icon-small.png);
+  background-repeat: no-repeat;
+  background-position: left 10px;
+  background-size: 14px;
+  padding-left: 26px;
+  margin-left: 12px;
+}
+
+.custom.top-buttons ul {
+      list-style: none;
+      padding: 0px;
+}
+
+.custom.top-buttons ul li {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.custom.top-buttons ul li a {
+  text-decoration: none;
+  color: #ffffff;
+  display: block;
+  background-repeat: repeat-x;
+  border-radius: 5px;
+  padding: 8px 15px;
+}
+
+.custom.top-buttons ul li .contact-us {
+  margin-top: 13px;
+  margin-left: 0px;
+  background: #009ada;
+  background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…EiIGhlaWdodD0iMSIgZmlsbD0idXJsKCNncmFkLXVjZ2ctZ2VuZXJhdGVkKSIgLz4KPC9zdmc+);
+  background: -moz-linear-gradient(top, #009ada 0%, #4a72b0 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#009ada), color-stop(100%,#4a72b0));
+  background: -webkit-linear-gradient(top, #009ada 0%,#4a72b0 100%);
+  background: -o-linear-gradient(top, #009ada 0%,#4a72b0 100%);
+  background: -ms-linear-gradient(top, #009ada 0%,#4a72b0 100%);
+  background: linear-gradient(to bottom, #009ada 0%,#4a72b0 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009ada', endColorstr='#4a72b0',GradientType=0 );
+}
+
+#form {
+  background: #efefef;
+  width: 1138px;
+margin: -95px auto 0px;
+  padding-bottom: 80px;
+  padding-top: 0px;  
+}
+
+
+
+
 
