--- a/module/Front/view/front/index/pending.phtml
+++ b/module/Front/view/front/index/pending.phtml
@@ -1,8 +1,18 @@
 
+<div id="text-top">
+    <h2><?php echo $this->translate('try_free'); ?></h2>
+</div>
+
+<div id="head-form">
+    <h3><?php // echo $this->translate('test_begin'); ?></h3>
+</div>
+
 <div id="form">
     <h1><?php echo $this->translate('welcome_message') ?></h1>
    
-    <div id="container" style="margin-top:50px">
-        <h2><?php echo $this->translate('freemium_account_created_pending_approval')?></h2>
+    <div id="container" style="margin-top:50px;padding:20px">
+        <div class="alert alert-success">
+            <?php echo $this->translate('freemium_account_created_pending_approval')?>
+        </div>
     </div>
 </div>
