--- a/module/Front/view/front/index/thanks.phtml
+++ b/module/Front/view/front/index/thanks.phtml
@@ -1,3 +1,14 @@
+<div id="text-top">
+    <h2><?php echo $this->translate('try_free'); ?></h2>
+</div>
+
+<div id="head-form">
+    <h3>
+        <?php if(!$this->internal) : ?>
+            <?php echo $this->translate('test_begin'); ?>
+        <?php endif; ?>
+    </h3>
+</div>
 
 <div id="form">
     <h1><?php echo $this->translate('welcome_message') ?></h1>
